--- a/fenwick.cabal
+++ b/fenwick.cabal
@@ -15,6 +15,6 @@ cabal-version:       >=1.8
 
 library
   hs-source-dirs:      src
-  exposed-modules:     FenwickSemi
-  build-depends:       base >=4.5,
+  exposed-modules:     Data.FenwickSemi
+  build-depends:       base >=4.5 && < 4.7,
                        semigroups == 0.9.* 
