--- a/fenwick-semi.cabal
+++ b/fenwick-semi.cabal
@@ -9,10 +9,17 @@ author:              David Nilsson
 maintainer:          nilsson.dd+code@gmail.com
 category:            Data
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.9.2
 
 library
   hs-source-dirs:      src
   exposed-modules:     Data.FenwickSemi
   build-depends:       base >=4.5 && < 4.7,
                        semigroups == 0.9.* 
+Test-Suite test-fenwick-semi
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      tests
+  main-is:             TestFenwickSemi.hs
+  build-depends:       base >=4.5 && < 4.7,
+                       semigroups == 0.9.*,
+                       QuickCheck >= 2.5 && < 2.7
