--- a/fenwick-semi.cabal
+++ b/fenwick-semi.cabal
@@ -21,5 +21,6 @@ Test-Suite test-fenwick-semi
   hs-source-dirs:      tests
   main-is:             TestFenwickSemi.hs
   build-depends:       base >=4.5 && < 4.7,
+                       fenwick-semi,
                        semigroups == 0.9.*,
                        QuickCheck >= 2.5 && < 2.7
